# HTTPServerFromScratch

./: CMakeLists.txt  README.md
benchmark/: benchmark.txt  heavyload.txt  simpleload.txt
content/: 404.html  helloworld.html  index.html  script.js  style.css
include/: HttpRequest.h  HttpResponse.h  Logger.h  Server.h  Threadpool.h
src/: ThreadPool.cpp  Threadpool.cpp  main.cpp
